--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -186,3 +186,25 @@ footer nav ul {
 	margin: 2em
 }
 
+/* Nouveau css */
+
+.filtres {
+    display: flex;
+    justify-content: space-evenly;
+    width: 50%;
+    margin: 35px auto;
+}
+
+.filtres > * {
+	padding: 10px 20px;
+	border: 1px solid #1D6154;
+	border-radius: 25px;
+	font-family: 'Syne';
+	color: #1D6154;
+	cursor: pointer;
+}
+
+.filtres > *:hover {
+	background-color: #1D6154;
+	color: white;
+}
